<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="login_image">Login Image</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account ?</string>
    <string name="login">Login</string>
    <string name="register_now">Register now</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="search_food">Search food</string>
    <string name="order">Order</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="rating">Rating</string>
    <string name="min_fee">Min Fee</string>
    <string name="time">Time</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="basket">Basket</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="district">District</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="min_delivery_fee">Min Delivery Fee</string>
    <string name="image_url">Image Url</string>
    <string name="add">Add</string>
    <string name="add_button">Add button</string>
    <string name="price">Price</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="search_restaurant">Search restaurant</string>
    <string name="order_for_today_or_tomorrow">Order for today or tomorrow</string>
    <string name="whether_you_are_planning_an_event_or_want_to_n_feed_your_team_browse_our_selection_of_trays_n_made_for_the_office">Whether you are planning an event or want to \n feed your team, browse our selection of trays\n made for the office.</string>
    <string name="let_the_chef_cook_for_you">Let the chef cook for you</string>
    <string name="small_gourmet_pleasures_to_sparkle_your_day">Small gourmet pleasures to sparkle your day.</string>
    <string name="delivery_to_your_office">Delivery to your office</string>
    <string name="you_want_it_to_be_delivered_at_home_at_your_n_office_or_even_come_get_back_your_n_parcel_a_tour_shop">You want it to be delivered at home, at your \n office or even come get back your \n parcel a tour shop.</string>
    <string name="last_orders">Last Orders</string>
    <string name="menu">Menu</string>

    <string-array name="Categories">
        <item>Burger</item>
        <item>Pizza</item>
        <item>Kebab</item>
        <item>Dessert</item>
        <item>Chicken</item>
        <item>Soup</item>
    </string-array>

    <string-array name="PaymentMethods">
        <item>Online Credit/Bank Card</item>
        <item>Credit Card</item>
        <item>Cash</item>
        <item>Ticket Restaurant</item>
        <item>Sodexo Restaurant Pass</item>
        <item>Multinet</item>
        <item>SetCard</item>
    </string-array>

</resources>